<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AJR Mobile</string>
    <string name="jenis_promo">Jenis Promo</string>
    <string name="besar_diskon">Besar Diskon</string>
    <string name="keterangan_isinya">Keterangan Isinya</string>
    <string name="kode_promo">Kode Promo</string>
    <string name="promo_yang_tersedia">Promo Yang Tersedia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_promo">Go To Promo</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="promo">Promo</string>
    <string name="mobil">Mobil</string>
    <string name="logout">Logout</string>
    <string name="nama_orang">Nama Orang</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="communication">Communication</string>
    <string name="riwayat_transaksi_anda">Riwayat Transaksi Anda</string>
    <string name="contact_us">Contact Us</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="harga_sewa">Harga Sewa</string>
    <string name="kapasitas_penumpang">Kapasitas Penumpang</string>
    <string name="fasilitas_mobil">Fasilitas Mobil</string>
    <string name="fasilitas_mobil_">Fasilitas Mobil : </string>
    <string name="laporan_mobil">Laporan Mobil</string>
    <string name="laporan_pendapatan">Laporan Pendapatan</string>
    <string name="laporan_5_driver_transaksi_terbanyak">Laporan 5 Driver Transaksi Terbanyak</string>
    <string name="laporan_5_customer_transaksi_terbanyak">Laporan 5 Customer Transaksi Terbanyak</string>
    <string name="laporan_performa_driver">Laporan Performa Driver</string>
    <string name="hallo_manager">Hallo Manager</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="berita_hari_ini">Berita Hari ini</string>
    <string name="selamat_datang">Selamat Datang, </string>
    <string name="nama_saya" tools:ignore="ExtraTranslation">Nama Saya</string>
    <string name="ini_belum_tahu_isinya_apa">Ini Belum Tahu isinya Apa</string>
    <string name="nama_customer">Nama Anda</string>
    <string name="alamat">Alamat</string>
    <string name="ini_alamat_customer">ini alamat Customer</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="atma">ATMA</string>
    <string name="jaya">JAYA</string>
    <string name="rental">RENTAL</string>
    <string name="password">Password</string>
    <string name="jogja">JOGJA</string>
    <string name="tipe_mobil">Tipe Mobil</string>
    <string name="bahan_bakar">Bahan Bakar</string>
    <string name="keterangan">Keterangan:</string>
    <string name="ini_alamat_driver">ini alamat driver</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="login_dengan_akun">Login dengan Akun</string>
    <string name="gambar">Gambar</string>
    <string name="nama_driver">Nama Driver</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="ini_nomor_telepon_driver">Ini Nomor Telepon Driver</string>
    <string name="ini_nomor_telepon_customer">Ini Nomor Telepon Customer</string>
    <string name="id_transaksi">ID_TRANSAKSI</string>
    <string name="tanggal_transaksi">Tanggal Transaksi</string>
    <string name="status_transaksi">Status Transaksi</string>
    <string name="panah"><![CDATA[<-->]]></string>
    <string name="rp_total_harga">Rp Total Harga</string>
    <string name="bahasa_inggris">Bahasa Inggris</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="tanggal_mulai_sewa">Tanggal Mulai Sewa</string>
    <string name="tanggal_selesai_sewa">Tanggal Selesai Sewa</string>
    <string name="durasi_sewa">Durasi Sewa</string>
    <string name="tanggal_kembali">Tanggal Kembali</string>
    <string name="data_mobil">Data Mobil</string>
    <string name="click_me_for_details"><![CDATA[Click me for details >>]]></string>
    <string name="riwayat">Riwayat</string>
    <string name="tidak_tersedia">Tidak Tersedia</string>
    <string name="tersedia">Tersedia</string>
    <string name="pilih_status_saya">PILIH STATUS SAYA</string>
    <string name="hold_me">hold me!</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="yuk_menyewa">Yuk Menyewa !</string>
    <string name="belom_ada_riwayat">Belom Ada Riwayat</string>
    <string name="ganti_password">GANTI PASSWORD</string>
    <string name="masukkan_password_baru_anda">Masukan Password Baru Anda</string>
    <string name="masukan_password_baru_anda">Masukan password baru</string>
    <string name="konfirmasi_password">Konfirmasi Password Baru</string>
    <string name="deskripsi">Atma Jaya Rental merupakan sebuah perusahaan rental yang bergerak pada bidang rental mobil, kami telah berdiri sejak tahun 2022 sampai saat ini kami telah berusaha agar kami menjadi perusahaan rental yang terpercaya oleh para customer kami dengan menjunjung tinggi nilai kejujuran, sopan santun, dan ramah tamah pada customer kami dan kami yakin kita akan senantiasa selalu ada untuk memenuhi kebutuhan rental mobil</string>
    <string name="textVisi">Menjadi sebuah perusahaan yang mampu melayani masyarakat dalam bidang penyewaan mobil agar berguna bagi masyarakat</string>
    <string name="atma_jaya_rental">ATMA JAYA RENTAL</string>
    <string name="visi">VISI</string>
    <string name="misi">MISI</string>
    <string name="misi_1">1. Jujur Dalam Segala Hal</string>
    <string name="misi_2">2. Senyum, ramah, bertanggung Jawab</string>
    <string name="misi_3">3. Prioritas Pelanggan/Customer adalah hal yang utama</string>
    <string name="our_contact">OUR CONTACT</string>
    <string name="_08152199678">08152199678</string>
    <string name="jln_babarsari_no_25_yogyakarta">Jln. Babarsari No 25, Yogyakarta</string>

    <!--    <string-array name="inggris_array">-->
    <!--        <item>Bisa</item>-->
    <!--        <item>Tidak Bisa</item>-->
    <!--    </string-array>-->
</resources>