<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_promo"
            android:icon="@drawable/ic_baseline_discount_24"
            android:title="@string/promo"/>
        <item
            android:id="@+id/nav_mobil"
            android:icon="@drawable/ic_baseline_car_rental_24"
            android:title="@string/mobil"/>
        <item
            android:id="@+id/nav_riwayat_trans"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/riwayat_transaksi_anda"/>
    </group>

    <group android:checkableBehavior="none" android:enabled="false">
        <item android:title="" />
        <item android:title="" />
        <item android:title="" />
        <item android:title="" />
        <item android:title="" />
        <item android:title="" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:title="@string/communication">
            <menu>
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_baseline_contact_support_24"
                    android:title="@string/contact_us"/>
                <item
                    
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_exit_to_app_24"
                    android:title="@string/logout"/>
            </menu>
        </item>
    </group>
</menu>