<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/alert_empty_border"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_status_saya"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/fredoka"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnTersedia"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_darken_4"
            android:textColor="@color/white"
            android:text="@string/tersedia" />

        <Button
            android:id="@+id/btnTidakTer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/redTheme"
            android:textColor="@color/white"
            android:text="@string/tidak_tersedia" />
    </LinearLayout>

</androidx.cardview.widget.CardView>