<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screen.ContactUsFragment">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFFFFF"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLogo"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/atma_jaya_rental"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/judul"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/deskripsi"
            android:textAlignment="center" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardVisi"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deskripsi"
            android:layout_margin="15dp">

            <RelativeLayout
                android:id="@+id/visi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visi"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/btnDownVisi"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparant"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/hiddenVisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnDownVisi"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textVisi" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMisi"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardVisi"
            android:layout_margin="15dp">

            <RelativeLayout
                android:id="@+id/misi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misi"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/btnDownMisi"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparant"
                    android:scaleX="2"
                    android:scaleY="2"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/hiddenMisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnDownMisi"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/misi_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/misi_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/misi_3" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/judul2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardMisi"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/our_contact"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/judul2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_phone_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/_08152199678"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_location_on_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/jln_babarsari_no_25_yogyakarta"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>