<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="5dp">

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="1dp"
            android:id="@+id/carditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            app:cardPreventCornerOverlap="false"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textJenis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="fill_vertical"
                            android:hint="@string/jenis_promo"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:id="@+id/textKode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toEndOf="@id/textJenis"
                            android:hint="@string/kode_promo"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="20sp" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/textBesarDiskon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/besar_diskon"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <ImageButton
                    android:id="@+id/btnDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:background="@color/transparant"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>

                <LinearLayout
                    android:id="@+id/expand_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/keterangan"/>

                    <TextView
                        android:textAlignment="center"
                        android:id="@+id/textKeterangan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/keterangan_isinya" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:background="@color/biruTheme"-->
<!--            android:layout_below="@+id/carditem"/>-->
</RelativeLayout>
